# AIEditor

./: .gitignore  AIEditor.py  README.md  ai_utils.py  io_utils.py  logging_config.py  pyproject.toml  scene_edit.py  schema.py
src/ai/: core.py
src/app/: main.py  main.ui  schema.py
src/docs/: API.md
src/scene_edit/: scene_edit.py
src/tools/: generate_ui_types.py
src/utils/: io.py  logging_config.py  order.py
